# fat

./: .gitignore  Cargo.toml  README.md  example.fat  example.fatrules  fatexpr.pest  proplog.pest
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/ast/: mod.rs  parser.rs
src/inference/: mod.rs
src/proof/: mod.rs
src/render/: latex.rs  mod.rs
