[package]
name = "fat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
comemo = "0.5.1"
itertools = "0.14.0"
pest = "2.8.6"
pest_derive = "2.8.6"
serde = {version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
wasm-bindgen = "0.2.108"
